<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:orientation="vertical"
        android:paddingTop="10dip" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/enter_secret_prompt"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/key_value"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:hint="@string/enter_key_hint"
            android:inputType="textNoSuggestions"
            android:singleLine="true" />

        <Spinner
            android:id="@+id/type_choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:prompt="@string/type_prompt" />

        <Button
            android:id="@+id/btn_scanQR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dip"
            android:onClick="onScanQR"
            android:text="@string/scan_qr" />

        <Button
            android:id="@+id/right_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dip"
            android:onClick="onSaveClick"
            android:text="@string/save_btn" />
    </LinearLayout>

</ScrollView>